eks/soketi-deployment.yaml
---
# StatefulSet Configuration for Soketi
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: soketi
  namespace: coolify
spec:
  serviceName: "soketi"
  replicas: 1
  selector:
    matchLabels:
      app: soketi
  template:
    metadata:
      labels:
        app: soketi
    spec:
      containers:
      - name: soketi
        image: quay.io/soketi/soketi:1.6-16-alpine
        args: ["--bind", "0.0.0.0"]
        ports:
        - containerPort: 6001
          name: soketi-port
        volumeMounts:
        - name: soketi-data
          mountPath: /app/data
        readinessProbe:
          httpGet:
            path: /ready
            port: 6001
            host: 0.0.0.0
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /ready
            port: 6001
            host: 0.0.0.0
          initialDelaySeconds: 40
          periodSeconds: 20
          timeoutSeconds: 2
          failureThreshold: 10
      volumes:
      - name: soketi-data
        persistentVolumeClaim:
          claimName: soketi-data
---
# Service Configuration for Soketi
apiVersion: v1
kind: Service
metadata:
  name: soketi
  namespace: coolify
spec:
  ports:
  - port: 6001
    targetPort: 6001
  selector:
    app: soketi
  type: ClusterIP
