eks/your-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coolify-ingress
  namespace: coolify
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
  # Optional: Include any other necessary annotations
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coolify
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soketi-ingress
  namespace: coolify
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 6001}]'
  # Optional: Include any other necessary annotations
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soketi-service
                port:
                  number: 6001
